--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Studia</title>
+    <title>Главная</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./css/main.min.css">
@@ -17,10 +17,10 @@
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="" class="nav__link">Главная</a>
+                        <a href="" class="nav__link--current">Главная</a>
                     </li>
                     <li class="nav__item">
-                        <a href="" class="nav__link">Наши проекты</a>
+                        <a href="./project.html" class="nav__link">Наши проекты</a>
                     </li>
                     <li class="nav__item">
                         <a href="" class="nav__link">Услуги</a>
