--- a/index.html
+++ b/index.html
@@ -45,15 +45,63 @@
         </div>
     </header>
 
-    <main> 
-        <!-- <section class="hero">
+    <main>
+
+        <!-- HERO -->
+
+        <section class="hero">
             <div class="container">
                 <p class="hero__text">Передовая IT студия</p>
                 <h1 class="hero__title">Мы создаем легкие решения<br>
                 сложных задач и проблем</h1>
                 <a href="#" class="hero__link">Наши проекты</a>
             </div>
-        </section> -->
+        </section>
+
+        <!-- FEATURES -->
+
+        <section class="features">
+            <div class="container">
+                <h2 class="features__title">Мы создаем мобильные приложения
+                для крупных корпораций</h2>
+                <p class="features__text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
+                текстов на латинице с начала XVI века.</p>
+                <div class="features__list">
+                    <ul>
+                        <li class="features__item">
+                                <h3 class="features__name">Создание сайтов</h3>
+                                <p class="features__sketch">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+                            <a href="#" class="features__link">
+                                <svg width="40" height="40">
+                                    <use href="./svg/sprite.svg#icon-project"></use>
+                                </svg>   
+                            </a>       
+                        </li>
+                        <li class="features__item">
+                                <h3 class="features__name">Создание сайтов</h3>
+                                <p class="features__sketch">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+                            <a href="#" class="features__link">
+                                <svg width="40" height="40">
+                                    <use href="./svg/sprite.svg#icon-project"></use>
+                                </svg>
+                            </a>
+                            
+                        </li>
+                        <li class="features__item">
+                                <h3 class="features__name">Создание сайтов</h3>
+                                <p class="features__sketch">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>
+                            <a href="#" class="features__link">
+                                <svg width="40" height="40">
+                                    <use href="./svg/sprite.svg#icon-project"></use>
+                                </svg>
+                            </a>   
+                        </li>
+                    </ul>
+                    <a href="#" class="features__button">Все услуги</a>
+                </div>
+            </div>
+        </section>
+
     </main>
     <script src="./js/menu.js"></script>
 </body>
