--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-    <header class="page-header">
+    <div class="wrapper">
+       <header class="page-header">
         <div class="container">
             <nav class="nav">
                 <button type="button" class="menu is-open" aria-expanded="true" aria-controls="nav__list" data-menu-button>
@@ -102,7 +103,25 @@
             </div>
         </section>
 
-    </main>
+        <!-- SERVICE -->
+
+        <section class="service">
+            <div class="container service__container">
+                <div class="service__content">
+                   <h2 class="service__title">Высокие стандарты<br>разработки</h2>
+                        <p class="service__text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
+                            текстов на латинице с начала XVI века. стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+                </div>
+                <div class="service__ava">
+                    <img src="./images/office.jpg" alt="Фото" class="service__img">
+                </div>
+                <a href="#" class="service__link">Подробнее о компании</a>
+            </div>
+        </section>
+
+    </main> 
+    </div>
+    
     <script src="./js/menu.js"></script>
 </body>
 </html>
