--- a/index.html
+++ b/index.html
@@ -116,6 +116,55 @@
                     <img src="./images/office.jpg" alt="Фото" class="service__img">
                 </div>
                 <a href="#" class="service__link">Подробнее о компании</a>
+                <div>
+                    <ul class="service__list">
+                        <li class="service__subitem">
+                            <svg width="30" height="30">
+                                <use href="./svg/sprite.svg#icon-web"></use>
+                            </svg>
+                            <h3 class="service__subtitle">123</h3>
+                        </li>
+                        <div class="service__subtext">
+                            <p>Our projects</p>
+                        </div>
+                        <li class="service__subitem">
+                            <svg width="30" height="30">
+                                <use href="./svg/sprite.svg#icon-web"></use>
+                            </svg>
+                            <h3 class="service__subtitle">123</h3>
+                        </li>
+                        <div class="service__subtext">
+                            <p>Our projects</p>
+                        </div>
+                        <li class="service__subitem">
+                            <svg width="30" height="30">
+                                <use href="./svg/sprite.svg#icon-web"></use>
+                            </svg>
+                            <h3 class="service__subtitle">123</h3>
+                        </li>
+                        <div class="service__subtext">
+                            <p>Our projects</p>
+                        </div>
+                        <li class="service__subitem">
+                            <svg width="30" height="30">
+                                <use href="./svg/sprite.svg#icon-web"></use>
+                            </svg>
+                            <h3 class="service__subtitle">123</h3>
+                        </li>
+                        <div class="service__subtext">
+                            <p>Our projects</p>
+                        </div>
+                        <li class="service__subitem">
+                            <svg width="30" height="30">
+                                <use href="./svg/sprite.svg#icon-web"></use>
+                            </svg>
+                            <h3 class="service__subtitle">123</h3>
+                        </li>
+                        <div class="service__subtext">
+                            <p>Our projects</p>
+                        </div>
+                    </ul>
+                </div>
             </div>
         </section>
 
