--- a/index.html
+++ b/index.html
@@ -168,6 +168,43 @@
             </div>
         </section>
 
+        <!-- WORKS -->
+         
+        <section class="works">
+            <div class="container">
+                <div class="works__content">
+                    <h2 class="works__title">Наши работы, на которых<br>мы специализируемся</h2>
+                    <a href="#" class="works__link">Все услуги</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- TEAM -->
+
+        <section class="team">
+            <div class="container">
+                <ul class="team__list">
+                    <li class="team__item">
+                        <img src="./images//hero.jpg" alt="фото команды" class="team__img">
+                        <h3 class="team__title"><span>01.</span>Исследование и упаковка</h3>
+                        <p class="team__text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+                    </li>
+                    <a href="#" class="team__link">Подробнее</a>
+                    <li class="team__item">
+                        <img src="./images/hero.jpg" alt="фото команды" class="team__img">
+                        <h3 class="team__title"><span>01.</span>Исследование и упаковка</h3>
+                        <p class="team__text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+                    </li>
+                    <a href="#" class="team__link">Подробнее</a>
+                    <li class="team__item">
+                        <img src="./images/hero.jpg" alt="фото команды" class="team__img">
+                        <h3 class="team__title"><span>01.</span>Исследование и упаковка</h3>
+                        <p class="team__text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+                    </li>
+                    <a href="#" class="team__link">Подробнее</a>
+                </ul>
+            </div>
+        </section>
     </main> 
     </div>
     
