--- a/index.html
+++ b/index.html
@@ -205,6 +205,31 @@
                 </ul>
             </div>
         </section>
+
+        <!-- PROJECT -->
+
+        <section class="project">
+            <div class="container">
+                <h2 class="project__title">Наши проекты</h2>
+                <p class="project__text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
+                текстов на латинице с начала XVI века.</p>
+                <ul class="project__list">
+                    <li class="project__item">
+                        <img src="./images/code-a.jpg" alt="code" class="project__img">
+                    </li>
+                    <li class="project__item">
+                        <img src="./images/code-b.jpg" alt="code" class="project__img">
+                    </li>
+                    <li class="project__item">
+                        <img src="./images/code-c.jpg" alt="code" class="project__img">
+                    </li>
+                    <li class="project__item">
+                        <img src="./images/code-d.jpg" alt="code" class="project__img">
+                    </li>
+                </ul>
+                <a href="" class="project__link">Все проекты</a>
+            </div>
+        </section>
     </main> 
     </div>
     
