--- a/index.html
+++ b/index.html
@@ -231,7 +231,27 @@
             </div>
         </section>
 
-        <!--  -->
+        <!-- ABOUTUS -->
+
+        <section class="aboutus">
+            <div class="container aboutus__container">
+                <h2 class="aboutus__title">Видео о нашей работе</h2>
+                <p class="aboutus__text">Просто посмотрите, как мы работаем</p>
+            </div>
+        </section>
+
+        <!-- VIDEO -->
+
+        <section class="video">
+            <div class="container">
+                <div>
+                    <h3 class="video__title">Подпишитесь на нашу рассылку</h3>
+                    <p class="">Полезные статьи, акции, новости - получите все это сейчас!</p>
+                    <input type="text" class="video__subscribe" name="subscribe" placeholder="Ваш e-mail">
+                    <button type="submit" class="video__btn">Подписаться</button>
+                </div>
+            </div>
+        </section>
     </main> 
     </div>
     
