--- a/index.html
+++ b/index.html
@@ -244,11 +244,17 @@
 
         <section class="video">
             <div class="container">
-                <div>
-                    <h3 class="video__title">Подпишитесь на нашу рассылку</h3>
-                    <p class="">Полезные статьи, акции, новости - получите все это сейчас!</p>
-                    <input type="text" class="video__subscribe" name="subscribe" placeholder="Ваш e-mail">
-                    <button type="submit" class="video__btn">Подписаться</button>
+                <div class="video__content">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/rsaJF0mPJ_Q" title="YouTube video player"
+                        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <form action="" class="video__form">   
+                        <h3 class="video__title">Подпишитесь на нашу рассылку</h3>
+                        <p class="video__text">Полезные статьи, акции, новости - получите все это сейчас!</p>
+                        <input type="text" class="video__subscribe" name="subscribe" placeholder="Ваш e-mail">
+                        <button type="submit" class="video__btn">Подписаться</button>
+                        <p class="video__subtext">Мы не шлем спам, и передаем никому ваши данные.</p>
+                    </form> 
                 </div>
             </div>
         </section>
