--- a/index.html
+++ b/index.html
@@ -271,15 +271,15 @@
                       <ul class="footer__list">
                        <li class="footer__item">
                            <a href="test@test.ru" class="footer__link">
-                               <svg width="15" height="12">
-                               <use href="./svg/sprite.svg#icon-mail"></use>
+                               <svg class="footer__icon" width="15" height="15">
+                                    <use href="./svg/sprite.svg#icon-mail"></use>
                                </svg>
                             test@test.ru
                            </a>
                         </li>
                         <li class="footer__item">
                            <a href="tel:+87775556699" class="footer__link">
-                               <svg width="15" height="15">
+                               <svg class="footer__icon" width="15" height="15">
                                    <use href="./svg/sprite.svg#icon-phone"></use>
                                </svg>
                             +8 777 555 66 99
@@ -287,7 +287,7 @@
                         </li>
                         <li class="footer__item">
                            <p class="footer__address">
-                               <svg width="15" height="15">
+                               <svg class="footer__icon" width="15" height="15">
                                    <use href="./svg/sprite.svg#icon-map"></use>
                                </svg>
                             Москва, Бульвар Ленина 33
@@ -299,32 +299,32 @@
                     <h3 class="footer__title">Основные ссылки</h3>
                     <ul class="footer__list">
                         <li class="footer__item">
-                            <a href="#">
-                                <svg width="15" height="15">
+                            <a href="#" class="footer__link">
+                                <svg class="footer__icon" width="5" height="9">
                                     <use href="./svg2/sprite-v.svg#icon-vector"></use>
                                 </svg>
                                 Главная
                             </a>
                         </li>
                         <li class="footer__item">
-                            <a href="#">
-                                <svg width="15" height="15">
+                            <a href="#" class="footer__link">
+                                <svg class="footer__icon" width="5" height="9">
                                     <use href="./svg2/sprite-v.svg#icon-vector"></use>
                                 </svg>
                                 Наши проекты
                             </a>
                         </li>
                         <li class="footer__item">
-                            <a href="#">
-                                <svg width="15" height="15">
+                            <a href="#" class="footer__link">
+                                <svg class="footer__icon" width="5" height="9">
                                     <use href="./svg2/sprite-v.svg#icon-vector"></use>
                                 </svg>
                                 Наши услуги
                             </a>
                         </li>
                         <li class="footer__item">
-                            <a href="#">
-                                <svg width="15" height="15">
+                            <a href="#" class="footer__link">
+                                <svg class="footer__icon" width="5" height="9">
                                     <use href="./svg2/sprite-v.svg#icon-vector"></use>
                                 </svg>
                                 Контакты
@@ -336,32 +336,32 @@
                     <h3 class="footer__title">Наши проекты</h3>
                     <ul class="footer__list">
                         <li class="footer__item">
-                            <a href="#">
-                                <svg width="15" height="15">
+                            <a href="#" class="footer__link">
+                                <svg class="footer__icon" width="5" height="9">
                                     <use href="./svg2/sprite-v.svg#icon-vector"></use>
                                 </svg>
                                 РосНано
                             </a>
                         </li>
                         <li class="footer__item">
-                            <a href="#">
-                                <svg width="15" height="15">
+                            <a href="#" class="footer__link">
+                                <svg class="footer__icon" width="5" height="9">
                                     <use href="./svg2/sprite-v.svg#icon-vector"></use>
                                 </svg>
                                 Сколково
                             </a>
                         </li>
                         <li class="footer__item">
-                            <a href="#">
-                                <svg width="15" height="15">
+                            <a href="#" class="footer__link">
+                                <svg class="footer__icon" width="5" height="9">
                                     <use href="./svg2/sprite-v.svg#icon-vector"></use>
                                 </svg>
                                 Проект “Восток”
                             </a>
                         </li>
                         <li class="footer__item">
-                            <a href="#">
-                                <svg width="15" height="15">
+                            <a href="#" class="footer__link">
+                                <svg class="footer__icon" width="5" height="9">
                                    <use href="./svg2/sprite-v.svg#icon-vector"></use>
                                 </svg>
                                 ТЭЦ Калининграда
@@ -373,32 +373,32 @@
                     <h3 class="footer__title">Социальные сети</h3>
                     <ul class="footer__list">
                         <li class="footer__item">
-                            <a href="#">
-                                <svg width="15" height="15">
+                            <a href="#" class="footer__link">
+                                <svg class="footer__icon" width="5" height="9">
                                     <use href="./svg2/sprite-v.svg#icon-vector"></use>
                                 </svg>
                                 VK.com
                             </a>
                         </li>
                         <li class="footer__item">
-                            <a href="#">
-                                <svg width="15" height="15">
+                            <a href="#" class="footer__link">
+                                <svg class="footer__icon" width="5" height="9">
                                     <use href="./svg2/sprite-v.svg#icon-vector"></use>
                                 </svg>
                                 Instagram
                             </a>
                         </li>
                         <li class="footer__item">
-                            <a href="#">
-                                <svg width="15" height="15">
+                            <a href="#" class="footer__link">
+                                <svg class="footer__icon" width="5" height="9">
                                     <use href="./svg2/sprite-v.svg#icon-vector"></use>
                                 </svg>
                                 Facebook
                             </a>
                         </li>
                         <li class="footer__item">
-                            <a href="#">
-                                <svg width="15" height="15">
+                            <a href="#" class="footer__link">
+                                <svg class="footer__icon" width="5" height="9">
                                     <use href="./svg2/sprite-v.svg#icon-vector"></use>
                                 </svg>
                                 Twitter
@@ -407,6 +407,9 @@
                     </ul>
                 </div>
                 
+            </div>
+            <div>
+                <p class="footer__line">© 2019. Все права защищены.</p>
             </div>
            
         </div>
